--- a/package.json
+++ b/package.json
@@ -2,20 +2,32 @@
   "name": "ts_application_template",
   "version": "0.0.1",
   "description": "A template for an application using TypeScript",
-  "main": "bin/main.js",
+  "main": "./lib/cli.js",
+  "bin": {
+    "ts-template": "./bin/ts-test"
+  },
 
-  "dependencies": {
-    "typescript": "^2.1.4",
-    "typings": "^2.1.0"
+  "dependencies": { 
   },
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "@types/mocha": "^2.2.35",
+    "@types/node": "^6.0.55",
+
+    "mocha": "^3.2.0",
+    "rimraf": "^2.5.4",
+    "typescript": "^2.1.4"
   },
 
   "scripts": {
-    "test": "npm run build && mocha bin/test/",
-    "build": "tsc",
-    "postinstall": "typings install"
+    "clean:bin": "rimraf lib/",
+    "clean:tests": "rimraf js_test/",
+    "clean": "npm run clean:bin && npm run clean:tests",
+
+    "tests": "npm run build:tests && mocha ./js_test/",
+
+    "build:bin": "tsc -p src/",
+    "build:tests": "tsc -p tests/",
+    "build": "npm run clean && npm run build:bin && npm run build:tests"
   },
   "author": "Alexander 'Polynomdivision'",
   "license": "ISC"
