--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "ts_application_template",
-  "version": "0.0.1",
-  "description": "A template for an application using TypeScript",
-  "main": "./lib/cli.js",
-  "bin": {
-   "ts-template": "./bin/ts-template"
-  },
+    "name": "ts_application_template",
+    "version": "0.0.1",
+    "description": "A template for writing an application in TypeScript",
+    "main": "./lib/cli.js",
+    "bin": {
+        "uback": "./bin/example"
+    },
+    "devDependencies": {
+        "@types/mocha": "^2.2.35",
+        "@types/node": "^6.0.55",
+        "mocha": "^3.2.0",
+        "rimraf": "^2.5.4",
+        "typescript": "^2.1.4",
+        "tslint": "^5.8.0"
+    },
+    "scripts": {
+        "clean:bin": "rimraf dist/lib/",
+        "clean:tests": "rimraf dist/tests/",
+        "clean": "npm run clean:bin && npm run clean:tests",
 
-  "dependencies": { 
-  },
-  "devDependencies": {
-    "@types/mocha": "^2.2.35",
-    "@types/node": "^6.0.55",
+        "build:bin": "tsc -p src/",
+        "build:tests": "tsc -p tests/",
 
-    "mocha": "^3.2.0",
-    "rimraf": "^2.5.4",
-    "typescript": "^2.1.4"
-  },
+        "lint:bin": "tslint -c tslint.json 'src/**/*.ts'",
+        "lint:tests": "tslint -c tslint.json 'tests/**/*.ts'",
+        "lint": "npm run lint:bin && npm run lint:tests",
 
-  "scripts": {
-    "clean:bin": "rimraf lib/",
-    "clean:tests": "rimraf js_test/",
-    "clean": "npm run clean:bin && npm run clean:tests",
-
-    "tests": "npm run build:tests && mocha ./js_test/",
-
-    "build:bin": "tsc -p src/",
-    "build:tests": "tsc -p tests/",
-    "build": "npm run clean && npm run build:bin && npm run build:tests"
-  },
-  "author": "Alexander 'Polynomdivisi" 
+        "build": "npm run clean:bin && npm run lint:bin && npm run build:bin",
+        "test": "npm run clean:tests && npm run lint:tests && npm run build:tests && mocha --recursive ./dist/tests/"
+    },
+    "author": "Alexander 'Polynomdivision'"
 }
