--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,10 @@
 {
-	"compilerOptions": {
-		"target": "ES6",	
-		"outDir": "../lib",
-		"noImplicitAny": true
+	  "compilerOptions": {
+        "target": "ES6",
+        "module": "CommonJS",
+		    "outDir": "../dist/lib/",
+		    "noImplicitAny": true,
+        "sourceMap": true,
+        "removeComments": true
 	}
 }
